# kernel_xiaomi_sm8250

./: .drone.yml  .gitignore  .gitmodules  .travis.yml  Android.bp  Android.mk  AndroidKernel.mk  Kbuild  Kconfig  MAINTAINERS  Makefile  Makefile.am  README.md  balloc.c  bengal-camera-sensor-qrd.dtsi  bengal-camera.dtsi  build.config.alioth  build.config.alioth.common  build.config.alioth.common.clang  build.config.alioth.no-cfi  build.config.common  build_alioth.sh  camera_stub.c  data_dlkm_vendor_board.mk  dir.c  exfat_fs.h  fatent.c  file.c  gen_headers_arm.bp  gen_headers_arm64.bp  inode.c  khaje-camera-sensor-qrd.dtsi  khaje-camera.dtsi  kona-camera-sensor-arglass.dtsi  kona-camera-sensor-cdp.dtsi  kona-camera-sensor-mtp.dtsi  kona-camera-sensor-rb5.dtsi  kona-camera-sensor-vc.dtsi  kona-camera-sensor-xr.dtsi  kona-camera-sensor-xrfusion.dtsi  (+13 more)
Documentation/: lto-build
arch/: Kconfig
asoc/: Kbuild  bengal.c  kona.c  msm-compress-q6-v2.c  msm-dai-fe.c  msm-dai-q6-v2.c  msm-lsm-client.c  msm-pcm-loopback-v2.c  msm-pcm-q6-noirq.c  msm-pcm-q6-v2.c  (+7 more)
drivers/emac-dwc-eqos/: Android.mk  DWC_ETH_QOS_desc.c  DWC_ETH_QOS_dev.c  DWC_ETH_QOS_drv.c  DWC_ETH_QOS_drv.h  DWC_ETH_QOS_eee.c  DWC_ETH_QOS_ethtool.c  DWC_ETH_QOS_ethtool.h  DWC_ETH_QOS_ipa.c  DWC_ETH_QOS_ipa.h  DWC_ETH_QOS_mdio.c  DWC_ETH_QOS_platform.c  DWC_ETH_QOS_poll_support.c  DWC_ETH_QOS_ptp.c  DWC_ETH_QOS_rgmii_io_macro.c  DWC_ETH_QOS_yapphdr.h  DWC_ETH_QOS_yheader.h  DWC_ETH_QOS_yregacc.h  DWC_ETH_QOS_yrgmii_io_macro_regacc.h  Kbuild  Makefile.am  Makefile.builtin  Makefile_app.builtin  emac_perf_settings.sh
(+3735 files in other folders)
